# finance-quant-tech

./: .gitignore  LICENSE  README.md  multicollinearity_detection.ipynb  pyproject.toml  trates.csv  treasury_rates.py
notebooks/: simple_reverse_mode_auto_diff.ipynb
pytorch/: networks.ipynb  tensors.ipynb
statistics/: curve_fitting.ipynb  poisson_distribution.ipynb
statistics/.ipynb_checkpoints/: linear_regression_in_pytohn-checkpoint.ipynb  lln_and_clt-checkpoint.ipynb  maximum_likelihood_estimation-checkpoint.ipynb
ztm-rust/: 01_rust_fundamentals.txt  Cargo.toml
ztm-rust/src/: main.rs
