[project]
name = "finance-quant-tech"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
]
